--- a/roundimageview/build.gradle
+++ b/roundimageview/build.gradle
@@ -20,4 +20,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
