--- a/roundimageview/build.gradle
+++ b/roundimageview/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.library'
 
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.LineChen'
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
@@ -20,5 +23,4 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
