--- a/roundimageview/build.gradle
+++ b/roundimageview/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
-apply plugin: 'com.github.dcendents.android-maven'
-group='com.github.LineChen'
+//apply plugin: 'com.github.dcendents.android-maven'
+//group='com.github.LineChen'
 
 android {
     compileSdkVersion 23
